Fixing alignment issue

--- a/scss/components/_contact-items.scss
+++ b/scss/components/_contact-items.scss
@@ -43,6 +43,7 @@
 
 .contact-item__title {
   margin-bottom: u(.5rem);
+  margin-top: 0;
 }
 
 .contact-item__icon {
